syntax = "proto3";

package helloworld;

import "google/api/annotations.proto";

service HelloWorld {
    rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
        option (google.api.http).post = "/hello";
    }

    rpc SayGoodbye(SayGoodbyeRequest) returns (SayGoodbyeResponse) {
        option (google.api.http).get = "/goodbye";
    }
}

message SayHelloRequest {
    string name = 1;
}

message SayHelloResponse {
    string message = 1;
}

message SayGoodbyeRequest {}

message SayGoodbyeResponse {
    string message = 1;
}